# StateSqft

./: .gitignore  BIA Project Report Pending.docx  Metro_invt_fs_uc_sfrcondo_sm_month.csv  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  chat_openai.py  deps.py  inventory_data.py  main.py  schemas_chat.py  settings.py  supabase_service.py
docs/: Metro_Inventory_Analysis_Project_Explanation.docx
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  useSession.ts
frontend/src/components/: AssistantMessage.tsx
frontend/src/lib/: supabase.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
frontend/src/types/: chat.ts
notebooks/: metrics_confusion_matrix.ipynb
scripts/: baseline.py  generate_project_docx.py  run_baselines.py  supabase_chat_messages.sql
src/bia652p/: __init__.py  config.py  evaluate.py  features.py
src/bia652p/data/: __init__.py  load.py
