[project]
name = "statesqft"
version = "0.1.0"
description = "StateSqft — ML baselines and evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
